--- a/src/main/resources/com/example/demo12/elementyzamowienia.fxml
+++ b/src/main/resources/com/example/demo12/elementyzamowienia.fxml
@@ -7,13 +7,16 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="565.0" prefWidth="1004.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo12.HelloController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo12.HelloController">
     <children>
-        <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1004.0">
+        <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1044.0">
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
@@ -32,35 +35,69 @@
                 </Menu>
             </menus>
         </MenuBar>
-        <SplitPane dividerPositions="0.29797979797979796" layoutX="-5.0" layoutY="27.0" prefHeight="538.0" prefWidth="1004.0">
+        <SplitPane dividerPositions="0.29797979797979796" layoutX="-5.0" layoutY="27.0" prefHeight="564.0" prefWidth="1051.0">
             <items>
                 <AnchorPane>
                     <children>
-                        <VBox layoutX="6.0" prefHeight="538.0" prefWidth="296.0">
+                        <VBox layoutX="6.0" prefHeight="562.0" prefWidth="304.0">
                             <children>
-                                <Button mnemonicParsing="false" onAction="#btnKlienci" prefHeight="35.0" prefWidth="296.0" text="Klienci" textAlignment="CENTER" />
-                                <Button mnemonicParsing="false" onAction="#btnDostawcy" prefHeight="35.0" prefWidth="296.0" text="Dostawcy" />
-                                <Button mnemonicParsing="false" onAction="#btnProdukty" prefHeight="35.0" prefWidth="296.0" text="Produkty" />
-                                <Button mnemonicParsing="false" onAction="#btnZamówienia" prefHeight="35.0" prefWidth="296.0" text="Zamówienia" />
-                                <Button mnemonicParsing="false" onAction="#btnElementyZamówienia" prefHeight="35.0" prefWidth="296.0" text="ElementyZamówienia" />
+                                <Button mnemonicParsing="false" onAction="#btnKlienci" prefHeight="35.0" prefWidth="306.0" text="Klienci" textAlignment="CENTER" />
+                                <Button mnemonicParsing="false" onAction="#btnDostawcy" prefHeight="35.0" prefWidth="306.0" text="Dostawcy" />
+                                <Button mnemonicParsing="false" onAction="#btnProdukty" prefHeight="35.0" prefWidth="306.0" text="Produkty" />
+                                <Button mnemonicParsing="false" onAction="#btnZamówienia" prefHeight="35.0" prefWidth="306.0" text="Zamówienia" />
+                                <Button mnemonicParsing="false" onAction="#btnElementyZamówienia" prefHeight="35.0" prefWidth="306.0" text="ElementyZamówienia" />
+                                <AnchorPane prefHeight="361.0" prefWidth="305.0">
+                                    <children>
+                                        <TextField layoutX="133.0" layoutY="45.0" />
+                                        <TextField layoutX="133.0" layoutY="70.0" />
+                                        <Text layoutX="20.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numer Zamówienia" />
+                                        <Text layoutX="81.0" layoutY="87.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Element" />
+                                        <TextField layoutX="133.0" layoutY="95.0" />
+                                        <TextField layoutX="133.0" layoutY="120.0" />
+                                        <TextField layoutX="133.0" layoutY="145.0" />
+                                        <TextField layoutX="133.0" layoutY="172.0" />
+                                        <Text layoutX="59.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID Produktu" />
+                                        <Text layoutX="98.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość" />
+                                        <Text layoutX="44.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cena elementu" />
+                                        <Text layoutX="83.0" layoutY="189.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Waluta" />
+                                        <Text layoutX="78.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dodaj elementy zamówienia">
+                                            <font>
+                                                <Font size="14.0" />
+                                            </font>
+                                        </Text>
+                                        <Button layoutX="128.0" layoutY="210.0" mnemonicParsing="false" text="Dodaj element zamówienia" />
+                                    </children>
+                                </AnchorPane>
                             </children>
                         </VBox>
                     </children>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="536.0" prefWidth="740.0">
-               <children>
-                  <TableView prefHeight="538.0" prefWidth="694.0">
-                    <columns>
-                      <TableColumn prefWidth="75.0" text="zam_id" />
-                      <TableColumn prefWidth="75.0" text="zam_numer" />
-                        <TableColumn prefWidth="75.0" text="zam_elem" />
-                        <TableColumn prefWidth="75.0" text="prod_id" />
-                        <TableColumn prefWidth="75.0" text="ilosc" />
-                        <TableColumn prefWidth="78.0" text="cena_elem" />
-                        <TableColumn prefWidth="72.0" text="waluta" />
-                    </columns>
-                  </TableView>
-               </children></AnchorPane>
+                    <children>
+                        <TableView fx:id="KlienciTable" layoutY="96.0" prefHeight="467.0" prefWidth="733.0">
+                            <columns>
+                                <TableColumn prefWidth="75.0" text="zam_id" />
+                                <TableColumn prefWidth="75.0" text="zam_numer" />
+                                <TableColumn prefWidth="75.0" text="zam_elem" />
+                                <TableColumn prefWidth="75.0" text="prod_id" />
+                                <TableColumn prefWidth="75.0" text="ilosc" />
+                                <TableColumn prefWidth="78.0" text="cena_elem" />
+                                <TableColumn prefWidth="72.0" text="waluta" />
+                            </columns>
+                        </TableView>
+                        <Text layoutX="22.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wyszukiwanie">
+                            <font>
+                                <Font size="15.0" />
+                            </font>
+                        </Text>
+                        <TextField fx:id="searchId" layoutX="159.0" layoutY="31.0" />
+                        <TextField fx:id="searchEmail" layoutX="431.0" layoutY="31.0" />
+                        <Text layoutX="395.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość" />
+                        <Text layoutX="137.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID" />
+                        <Button layoutX="208.0" layoutY="63.0" mnemonicParsing="false" text="Wyszukaj" />
+                        <Button layoutX="308.0" layoutY="63.0" mnemonicParsing="false" onAction="#update" text="Aktualizuj" />
+                        <Button layoutX="416.0" layoutY="63.0" mnemonicParsing="false" text="Usuń" />
+                    </children></AnchorPane>
             </items>
         </SplitPane>
     </children>
