--- a/src/main/resources/com/example/demo12/dostawcy.fxml
+++ b/src/main/resources/com/example/demo12/dostawcy.fxml
@@ -14,7 +14,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo12.HelloController">
+<?import javafx.scene.control.TextArea?>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo12.DostawcyController">
     <children>
         <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1044.0">
             <menus>
@@ -64,6 +65,7 @@
                                             </font>
                                         </Text>
                                         <Button layoutX="157.0" layoutY="181.0" mnemonicParsing="false" text="Dodaj dostawce" />
+                                        <TextArea fx:id="resultConsole" layoutX="65.0" layoutY="331.0" prefHeight="35.0" prefWidth="200.0" />
                                     </children>
                                 </AnchorPane>
                             </children>
@@ -92,7 +94,7 @@
                         <Text layoutX="395.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
                         <Text layoutX="137.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID" />
                         <Button layoutX="208.0" layoutY="63.0" mnemonicParsing="false" text="Wyszukaj" />
-                        <Button layoutX="308.0" layoutY="63.0" mnemonicParsing="false" onAction="#update" text="Aktualizuj" />
+                        <Button layoutX="308.0" layoutY="63.0" mnemonicParsing="false" text="Aktualizuj" />
                         <Button layoutX="416.0" layoutY="63.0" mnemonicParsing="false" text="Usuń" />
                     </children></AnchorPane>
             </items>
