--- a/src/main/resources/com/example/demo12/klienci.fxml
+++ b/src/main/resources/com/example/demo12/klienci.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo12.HelloController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo12.KlienciController">
    <children>
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1044.0">
          <menus>
@@ -99,9 +99,10 @@
                   <TextField fx:id="searchEmail" layoutX="431.0" layoutY="31.0" />
                   <Text layoutX="395.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
                   <Text layoutX="137.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID" />
-                  <Button layoutX="208.0" layoutY="63.0" mnemonicParsing="false" text="Wyszukaj" />
-                  <Button layoutX="308.0" layoutY="63.0" mnemonicParsing="false" onAction="#update" text="Aktualizuj" />
-                  <Button layoutX="416.0" layoutY="63.0" mnemonicParsing="false" onAction="#delete" text="Usuń" />
+                  <Button layoutX="168.0" layoutY="63.0" mnemonicParsing="false" onAction="#searchKlienci" text="Wyszukaj" />
+                  <Button layoutX="274.0" layoutY="63.0" mnemonicParsing="false" onAction="#updateKlienci" text="Aktualizuj" />
+                  <Button layoutX="380.0" layoutY="63.0" mnemonicParsing="false" onAction="#deleteKlienci" text="Usuń" />
+                  <Button layoutX="464.0" layoutY="63.0" mnemonicParsing="false" onAction="#searchAllKlienci" text="Pokaż wszystko" />
                </children></AnchorPane>
          </items>
       </SplitPane>
