--- a/src/main/resources/com/example/demo12/dostawcy.fxml
+++ b/src/main/resources/com/example/demo12/dostawcy.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -14,7 +15,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.control.TextArea?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo12.DostawcyController">
     <children>
         <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1044.0">
@@ -49,13 +49,13 @@
                                 <Button mnemonicParsing="false" onAction="#btnElementyZamówienia" prefHeight="35.0" prefWidth="306.0" text="ElementyZamówienia" />
                                 <AnchorPane prefHeight="361.0" prefWidth="305.0">
                                     <children>
-                                        <TextField layoutX="133.0" layoutY="45.0" />
-                                        <TextField layoutX="133.0" layoutY="70.0" />
+                                        <TextField fx:id="txtNazwa" layoutX="133.0" layoutY="45.0" />
+                                        <TextField fx:id="txtMiejscowosc" layoutX="133.0" layoutY="70.0" />
                                         <Text layoutX="89.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nazwa" />
                                         <Text layoutX="62.0" layoutY="87.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Miejscowość" />
-                                        <TextField layoutX="133.0" layoutY="95.0" />
-                                        <TextField layoutX="133.0" layoutY="120.0" />
-                                        <TextField layoutX="133.0" layoutY="145.0" />
+                                        <TextField fx:id="txtUlica" layoutX="133.0" layoutY="95.0" />
+                                        <TextField fx:id="txtKraj" layoutX="133.0" layoutY="120.0" />
+                                        <TextField fx:id="txtEmail" layoutX="133.0" layoutY="145.0" />
                                         <Text layoutX="102.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ulica" />
                                         <Text layoutX="102.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kraj" />
                                         <Text layoutX="98.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
@@ -64,7 +64,7 @@
                                                 <Font size="14.0" />
                                             </font>
                                         </Text>
-                                        <Button layoutX="157.0" layoutY="181.0" mnemonicParsing="false" text="Dodaj dostawce" />
+                                        <Button layoutX="157.0" layoutY="181.0" mnemonicParsing="false" onAction="#dodaj" text="Dodaj dostawce" />
                                         <TextArea fx:id="resultConsole" layoutX="65.0" layoutY="331.0" prefHeight="35.0" prefWidth="200.0" />
                                     </children>
                                 </AnchorPane>
@@ -74,14 +74,14 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="536.0" prefWidth="740.0">
                     <children>
-                        <TableView fx:id="KlienciTable" layoutY="96.0" prefHeight="467.0" prefWidth="733.0">
+                        <TableView fx:id="Table" layoutY="96.0" prefHeight="467.0" prefWidth="733.0">
                             <columns>
-                                <TableColumn prefWidth="60.0" text="dost_id" />
-                                <TableColumn prefWidth="126.0" text="dost_nazwa" />
-                                <TableColumn prefWidth="119.0" text="dost_miejscowosc" />
-                                <TableColumn prefWidth="131.0" text="dost_ulica" />
-                                <TableColumn prefWidth="122.0" text="dost_kraj" />
-                                <TableColumn prefWidth="135.0" text="dost_email" />
+                                <TableColumn fx:id="coldost_id" prefWidth="60.0" text="dost_id" />
+                                <TableColumn fx:id="coldost_nazwa" prefWidth="126.0" text="dost_nazwa" />
+                                <TableColumn fx:id="coldost_miejscowosc" prefWidth="119.0" text="dost_miejscowosc" />
+                                <TableColumn fx:id="coldost_ulica" prefWidth="131.0" text="dost_ulica" />
+                                <TableColumn fx:id="coldost_kraj" prefWidth="122.0" text="dost_kraj" />
+                                <TableColumn fx:id="coldost_email" prefWidth="135.0" text="dost_email" />
                             </columns>
                         </TableView>
                         <Text layoutX="22.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wyszukiwanie">
@@ -93,9 +93,10 @@
                         <TextField fx:id="searchEmail" layoutX="431.0" layoutY="31.0" />
                         <Text layoutX="395.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
                         <Text layoutX="137.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID" />
-                        <Button layoutX="208.0" layoutY="63.0" mnemonicParsing="false" text="Wyszukaj" />
-                        <Button layoutX="308.0" layoutY="63.0" mnemonicParsing="false" text="Aktualizuj" />
-                        <Button layoutX="416.0" layoutY="63.0" mnemonicParsing="false" text="Usuń" />
+                        <Button layoutX="168.0" layoutY="63.0" mnemonicParsing="false" onAction="#search" text="Wyszukaj" />
+                        <Button layoutX="274.0" layoutY="63.0" mnemonicParsing="false" onAction="#update" text="Aktualizuj" />
+                        <Button layoutX="380.0" layoutY="63.0" mnemonicParsing="false" onAction="#delete" text="Usuń" />
+                        <Button layoutX="464.0" layoutY="63.0" mnemonicParsing="false" onAction="#searchAll" text="Pokaż wszystko" />
                     </children></AnchorPane>
             </items>
         </SplitPane>
