--- a/src/main/resources/com/example/demo12/elementyzamowienia.fxml
+++ b/src/main/resources/com/example/demo12/elementyzamowienia.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -14,7 +15,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.control.TextArea?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo12.ElementyzamowieniaController">
     <children>
         <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1044.0">
@@ -49,14 +49,14 @@
                                 <Button mnemonicParsing="false" onAction="#btnElementyZamówienia" prefHeight="35.0" prefWidth="306.0" text="ElementyZamówienia" />
                                 <AnchorPane prefHeight="361.0" prefWidth="305.0">
                                     <children>
-                                        <TextField layoutX="133.0" layoutY="45.0" />
-                                        <TextField layoutX="133.0" layoutY="70.0" />
+                                        <TextField fx:id="txtZamNumer" layoutX="133.0" layoutY="45.0" />
+                                        <TextField fx:id="txtZamElem" layoutX="133.0" layoutY="70.0" />
                                         <Text layoutX="20.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numer Zamówienia" />
                                         <Text layoutX="81.0" layoutY="87.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Element" />
-                                        <TextField layoutX="133.0" layoutY="95.0" />
-                                        <TextField layoutX="133.0" layoutY="120.0" />
-                                        <TextField layoutX="133.0" layoutY="145.0" />
-                                        <TextField layoutX="133.0" layoutY="172.0" />
+                                        <TextField fx:id="txtProdId" layoutX="133.0" layoutY="95.0" />
+                                        <TextField fx:id="txtIlosc" layoutX="133.0" layoutY="120.0" />
+                                        <TextField fx:id="txtCenaElem" layoutX="133.0" layoutY="145.0" />
+                                        <TextField fx:id="txtWaluta" layoutX="133.0" layoutY="172.0" />
                                         <Text layoutX="59.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID Produktu" />
                                         <Text layoutX="98.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość" />
                                         <Text layoutX="44.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cena elementu" />
@@ -66,7 +66,7 @@
                                                 <Font size="14.0" />
                                             </font>
                                         </Text>
-                                        <Button layoutX="128.0" layoutY="210.0" mnemonicParsing="false" text="Dodaj element zamówienia" />
+                                        <Button layoutX="128.0" layoutY="210.0" mnemonicParsing="false" onAction="#dodaj" text="Dodaj element zamówienia" />
                                         <TextArea fx:id="resultConsole" layoutX="65.0" layoutY="331.0" prefHeight="35.0" prefWidth="200.0" />
                                     </children>
                                 </AnchorPane>
@@ -76,15 +76,15 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="536.0" prefWidth="740.0">
                     <children>
-                        <TableView fx:id="KlienciTable" layoutY="96.0" prefHeight="467.0" prefWidth="733.0">
+                        <TableView fx:id="Table" layoutY="96.0" prefHeight="467.0" prefWidth="733.0">
                             <columns>
-                                <TableColumn prefWidth="75.0" text="zam_id" />
-                                <TableColumn prefWidth="75.0" text="zam_numer" />
-                                <TableColumn prefWidth="75.0" text="zam_elem" />
-                                <TableColumn prefWidth="75.0" text="prod_id" />
-                                <TableColumn prefWidth="75.0" text="ilosc" />
-                                <TableColumn prefWidth="78.0" text="cena_elem" />
-                                <TableColumn prefWidth="72.0" text="waluta" />
+                                <TableColumn fx:id="colzam_id" prefWidth="75.0" text="zam_id" />
+                                <TableColumn fx:id="colzam_numer" prefWidth="75.0" text="zam_numer" />
+                                <TableColumn fx:id="colzam_elem" prefWidth="75.0" text="zam_elem" />
+                                <TableColumn fx:id="colprod_id" prefWidth="75.0" text="prod_id" />
+                                <TableColumn fx:id="colilosc" prefWidth="75.0" text="ilosc" />
+                                <TableColumn fx:id="colcena_elem" prefWidth="78.0" text="cena_elem" />
+                                <TableColumn fx:id="colwaluta" prefWidth="72.0" text="waluta" />
                             </columns>
                         </TableView>
                         <Text layoutX="22.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wyszukiwanie">
@@ -96,9 +96,10 @@
                         <TextField fx:id="searchEmail" layoutX="431.0" layoutY="31.0" />
                         <Text layoutX="395.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość" />
                         <Text layoutX="137.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID" />
-                        <Button layoutX="208.0" layoutY="63.0" mnemonicParsing="false" text="Wyszukaj" />
-                        <Button layoutX="308.0" layoutY="63.0" mnemonicParsing="false" text="Aktualizuj" />
-                        <Button layoutX="416.0" layoutY="63.0" mnemonicParsing="false" text="Usuń" />
+                        <Button layoutX="168.0" layoutY="63.0" mnemonicParsing="false" onAction="#search" text="Wyszukaj" />
+                        <Button layoutX="274.0" layoutY="63.0" mnemonicParsing="false" onAction="#update" text="Aktualizuj" />
+                        <Button layoutX="380.0" layoutY="63.0" mnemonicParsing="false" onAction="#delete" text="Usuń" />
+                        <Button layoutX="464.0" layoutY="63.0" mnemonicParsing="false" onAction="#searchAll" text="Pokaż wszystko" />
                     </children></AnchorPane>
             </items>
         </SplitPane>
