--- a/src/main/resources/com/example/demo12/produkty.fxml
+++ b/src/main/resources/com/example/demo12/produkty.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -14,7 +15,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.control.TextArea?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo12.ProduktyController">
     <children>
         <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1044.0">
@@ -49,13 +49,13 @@
                                 <Button mnemonicParsing="false" onAction="#btnElementyZamówienia" prefHeight="35.0" prefWidth="306.0" text="ElementyZamówienia" />
                                 <AnchorPane prefHeight="361.0" prefWidth="305.0">
                                     <children>
-                                        <TextField layoutX="133.0" layoutY="45.0" />
-                                        <TextField layoutX="133.0" layoutY="70.0" />
+                                        <TextField fx:id="txtIdDostawcy" layoutX="133.0" layoutY="45.0" />
+                                        <TextField fx:id="txtNazwaProduktu" layoutX="133.0" layoutY="70.0" />
                                         <Text layoutX="55.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID Dostawcy" />
                                         <Text layoutX="37.0" layoutY="87.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nazwa produktu" />
-                                        <TextField layoutX="133.0" layoutY="95.0" />
-                                        <TextField layoutX="133.0" layoutY="120.0" />
-                                        <TextField layoutX="133.0" layoutY="145.0" />
+                                        <TextField fx:id="txtCena" layoutX="133.0" layoutY="95.0" />
+                                        <TextField fx:id="txtWaluta" layoutX="133.0" layoutY="120.0" />
+                                        <TextField fx:id="txtKrajProdukcji" layoutX="133.0" layoutY="145.0" />
                                         <Text layoutX="94.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cena" />
                                         <Text layoutX="88.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Waluta" />
                                         <Text layoutX="51.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kraj produkcji" />
@@ -64,7 +64,7 @@
                                                 <Font size="14.0" />
                                             </font>
                                         </Text>
-                                        <Button layoutX="161.0" layoutY="181.0" mnemonicParsing="false" text="Dodaj produkt" />
+                                        <Button layoutX="161.0" layoutY="181.0" mnemonicParsing="false" onAction="#dodaj" text="Dodaj produkt" />
                                         <TextArea fx:id="resultConsole" layoutX="65.0" layoutY="331.0" prefHeight="35.0" prefWidth="200.0" />
                                     </children>
                                 </AnchorPane>
@@ -74,14 +74,14 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="536.0" prefWidth="740.0">
                     <children>
-                        <TableView fx:id="KlienciTable" layoutY="96.0" prefHeight="467.0" prefWidth="733.0">
+                        <TableView fx:id="Table" layoutY="96.0" prefHeight="467.0" prefWidth="733.0">
                             <columns>
-                                <TableColumn prefWidth="75.0" text="prod_id" />
-                                <TableColumn prefWidth="75.0" text="dost_id" />
-                                <TableColumn prefWidth="196.0" text="prod_nazwa" />
-                                <TableColumn prefWidth="90.0" text="prod_cena" />
-                                <TableColumn prefWidth="76.0" text="prod_waluta" />
-                                <TableColumn prefWidth="181.0" text="prod_kraj" />
+                                <TableColumn fx:id="colprod_id" prefWidth="75.0" text="prod_id" />
+                                <TableColumn fx:id="coldost_id" prefWidth="75.0" text="dost_id" />
+                                <TableColumn fx:id="colprod_nazwa" prefWidth="196.0" text="prod_nazwa" />
+                                <TableColumn fx:id="colprod_cena" prefWidth="90.0" text="prod_cena" />
+                                <TableColumn fx:id="colprod_waluta" prefWidth="76.0" text="prod_waluta" />
+                                <TableColumn fx:id="colprod_kraj" prefWidth="181.0" text="prod_kraj" />
                             </columns>
                         </TableView>
                         <Text layoutX="22.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wyszukiwanie">
@@ -90,12 +90,13 @@
                             </font>
                         </Text>
                         <TextField fx:id="searchId" layoutX="159.0" layoutY="31.0" />
-                        <TextField fx:id="searchEmail" layoutX="431.0" layoutY="31.0" />
+                        <TextField fx:id="searchNazwa" layoutX="431.0" layoutY="31.0" />
                         <Text layoutX="332.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nazwa produktu" />
                         <Text layoutX="137.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID" />
-                        <Button layoutX="208.0" layoutY="63.0" mnemonicParsing="false" text="Wyszukaj" />
-                        <Button layoutX="308.0" layoutY="63.0" mnemonicParsing="false" text="Aktualizuj" />
-                        <Button layoutX="416.0" layoutY="63.0" mnemonicParsing="false" text="Usuń" />
+                        <Button layoutX="168.0" layoutY="63.0" mnemonicParsing="false" onAction="#search" text="Wyszukaj" />
+                        <Button layoutX="274.0" layoutY="63.0" mnemonicParsing="false" onAction="#update" text="Aktualizuj" />
+                        <Button layoutX="380.0" layoutY="63.0" mnemonicParsing="false" onAction="#delete" text="Usuń" />
+                        <Button layoutX="464.0" layoutY="63.0" mnemonicParsing="false" onAction="#searchAll" text="Pokaż wszystko" />
                     </children></AnchorPane>
             </items>
         </SplitPane>
