--- a/src/main/resources/com/example/demo12/zamowienia.fxml
+++ b/src/main/resources/com/example/demo12/zamowienia.fxml
@@ -59,7 +59,7 @@
                                             </font>
                                         </Text>
                                         <Button layoutX="151.0" layoutY="111.0" mnemonicParsing="false" onAction="#dodaj" text="Dodaj zamówienie" />
-                                        <TextArea fx:id="resultConsole" layoutX="65.0" layoutY="331.0" prefHeight="35.0" prefWidth="200.0" />
+                                        <TextArea fx:id="resultConsole" layoutX="12.0" layoutY="341.0" prefHeight="37.0" prefWidth="285.0" />
                                     </children>
                                 </AnchorPane>
                             </children>
@@ -71,8 +71,8 @@
                         <TableView fx:id="Table" layoutY="96.0" prefHeight="467.0" prefWidth="733.0">
                             <columns>
                                 <TableColumn fx:id="colzam_numer" prefWidth="75.0" text="zam_numer" />
-                                <TableColumn fx:id="colzam_data" prefWidth="180.0" text="zam_data" />
-                                <TableColumn fx:id="colkl_id" prefWidth="98.0" text="kl_id" />
+                                <TableColumn fx:id="colzam_data" prefWidth="140.0" text="zam_data" />
+                                <TableColumn fx:id="colkl_id" prefWidth="101.0" text="kl_id" />
                             </columns>
                         </TableView>
                         <Text layoutX="22.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wyszukiwanie">
@@ -80,14 +80,16 @@
                                 <Font size="15.0" />
                             </font>
                         </Text>
-                        <TextField fx:id="searchId" layoutX="159.0" layoutY="31.0" />
-                        <TextField fx:id="searchEmail" layoutX="431.0" layoutY="31.0" />
-                        <Text layoutX="320.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numer zamówienia" />
-                        <Text layoutX="101.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID Klienta" />
+                        <TextField fx:id="searchZamNumer" layoutX="127.0" layoutY="31.0" prefHeight="25.0" prefWidth="92.0" />
+                        <TextField fx:id="searchId" layoutX="321.0" layoutY="31.0" prefHeight="25.0" prefWidth="92.0" />
+                        <Text layoutX="257.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID Klienta" />
+                        <Text layoutX="14.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numer zamówienia" />
                         <Button layoutX="168.0" layoutY="63.0" mnemonicParsing="false" onAction="#search" text="Wyszukaj" />
                         <Button layoutX="274.0" layoutY="63.0" mnemonicParsing="false" onAction="#update" text="Aktualizuj" />
                         <Button layoutX="380.0" layoutY="63.0" mnemonicParsing="false" onAction="#delete" text="Usuń" />
                         <Button layoutX="464.0" layoutY="63.0" mnemonicParsing="false" onAction="#searchAll" text="Pokaż wszystko" />
+                  <Text layoutX="435.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data zamówienia" />
+                  <TextField fx:id="updateDataZam" layoutX="534.0" layoutY="31.0" />
                     </children></AnchorPane>
             </items>
         </SplitPane>
